# ibm-odm-decision-mcp-server

./: .secrets.baseline  Dockerfile  README.md  pyproject.toml
.github/workflows/: cve-scan.yml
docs/: Claude-desktop-integration-guide.md  IBM-Bob-integration-guide.md  IBM-watsonx-orchestrate-guide.md
src/decision_mcp_server/: Credentials.py  DecisionMCPServer.py  DecisionServerManager.py  DecisionServiceDescription.py  ExecutionToolTrace.py  __init__.py  config.py
src/decision_mcp_server/utils/: ssl_utils.py
tests/: test_credentials.py  test_decision_mcp_server.py  test_decision_service_description.py  test_decisionservermanager.py  test_execution_tool_trace.py
