[project]
name = "decision-mcp-server"
version = "0.9.0"
description = "An MCP Server enabling integration with IBM Decision Server Runtime to retrieve and invoke decision services."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "mcp>=1.12.2","requests","pyyaml","jsonref","validator_collection","PyJWT","cryptography"]
[[project.authors]]
name = "laurent grateau"
email = "laurent.grateau@fr.ibm.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-html>=4.1.1",
    "responses>=0.25.8",
    "urllib3>=2.6.3",
    "validator-collection>=1.5.0",
    "starlette>=0.49.1",
    "urllib3>=2.6.3",
    "python-multipart>=0.0.22",
    "mcp>=1.23.0",
]

[project.scripts]
decision-mcp-server = "decision_mcp_server:main"
ibm-odm-decision-mcp-server = "decision_mcp_server:main"
start = "decision_mcp_server:main"